--- a/README.Rmd
+++ b/README.Rmd
@@ -191,9 +191,9 @@ runNetworkDash()
 Sometimes we want to collect Twitter data in an isolated batch, without initiating these processes to track panels of users.  To do this, while still taking advantage of tricordR's token efficiencies, we use the mid-level workhorse functions shown below.
 
 ```{r}
-getTimelinesHistorical(users = user_ids)
-getFollowersBig(users = "18906561", n = 20000, list_tokens = my_tokens, max_hours = 1)
-getFriendsBig(users = "18906561", n = 20000, list_tokens = my_tokens, max_hours = 1)
+test_timelines <- getTimelinesHistorical(users = user_ids[1:3], list_tokens = my_tokens)
+test_followers <- getFollowersBig(users = user_ids[1:3], n = 20000, list_tokens = my_tokens, max_hours = 1)
+test_friends <- getFriendsBig(users = user_ids[1:3], n = 20000, list_tokens = my_tokens, max_hours = 1)
 ```
 
 ## Reading Data for Analysis
