--- a/README.Rmd
+++ b/README.Rmd
@@ -198,51 +198,10 @@ test_friends <- getFriendsBig(users = user_ids[1:3], n = 20000, list_tokens = my
 
 ## Reading Data for Analysis
 
-When we want to read in the full datasets to R for analysis, we need convenient access to the data we have collected.
-
-
-
-
+When we want to read in the full timeline datasets to R for analysis, we need convenient access to the data we have collected.  To do this, use the prep_timeline_data() function, with the options specified below, to read in all available timeline data that has been scraped to date.
 
 ```{r}
-
-
+all_timeline_data <- prep_timeline_data(panel_directory = "~/tricordings/studies/my_first_study/random_tweeters", sessions_back = 1, load_all_since_first = T, include_historical = T, all_columns = T)
 ```
-
-
-
-```{r}
-
-
-```
-
-
-
-```{r}
-
-
-```
-
-
-
-```{r}
-
-
-```
-
-
-
-```{r}
-
-
-```
-
-
-
-```{r}
-
-
-```
-
 
 
