--- a/README.Rmd
+++ b/README.Rmd
@@ -105,9 +105,9 @@ This simply creates a new folder in the tricordR_data/studies directory, where u
 ```{r}
 my_tokens <- prepTokens("my_twitter_tokens", 1:9) #prepare all nine of your tokens for usage
 
-user_ids <- rtweet::stream_tweets(timeout = 5, #get some random user ids by streaming tweets for 5 seconds
+user_ids <- rtweet::stream_tweets(timeout = 10, #get some random user ids by streaming tweets for 10 seconds
                                   token = my_tokens[[1]], #you'll only need one of your tokens for this
-                                  ) %>% filter(lang == "en") %>% pull(user_id) %>% unique()
+                                  ) %>% filter(lang == "en") %>% pull(user_id) %>% unique() #pull unique user_ids of people tweeting in english
 
 if (length(user_ids)>100) {user_ids <- user_ids[1:100]} #if there are more than 100, take the first 100 for a rapid demonstration
 
