--- a/README.Rmd
+++ b/README.Rmd
@@ -116,7 +116,7 @@ addPanel(study_name = "my_first_study",
          user_ids = user_ids,
          scrape_timelines = TRUE,
          scrape_friends = TRUE,
-         scrape_followers = TRUE,
+         scrape_followers = FALSE,
          scrape_favorites = FALSE,
          first_scrape = TRUE,
          tokens = my_tokens) #use all nine of your tokens for this (it can take a few minutes)
