--- a/README.Rmd
+++ b/README.Rmd
@@ -66,8 +66,8 @@ Repeat this process, keeping ```set_name``` fixed, for all the tokens you have c
 
 If you intend to use tricordR's automated scraping features, add the following line to your crontab:
 
-``` bash
-00 12 00 * * * usr/local/bin/Rscript /Library/Frameworks/R.framework/Versions/4.0/Resources/library/tricordR/scripts/daily_twitter_scrape.R
+```{bash}
+00 12 * * * /usr/local/bin/Rscript /Library/Frameworks/R.framework/Versions/4.0/Resources/library/tricordR/scripts/daily_twitter_scrape.R
 ```
 
 This will prompt tricordR to update all tracked user panels (see below) at 12 noon every day, so long as your computer is not asleep.  If you're new to cron and use a mac, see <a href="https://ole.michelsen.dk/blog/schedule-jobs-with-crontab-on-mac-osx/" target="_blank">this helpful primer</a>.  Note: If the above path is not the correct path to your installation of tricordR, replace it with the path returned by the following R command:
@@ -78,14 +78,14 @@ system.file("scripts", "daily_twitter_scrape.R", package = "tricordR")
 
 Similarly, you may need to specify a different path to your Rscript installation using the following bash command:
 
-``` bash
+```{bash}
 which Rscript
 ```
 
 Finally, to save logs from automated scrapes, add the following line to the end of your cron job, specifying the path to your tricordings folder (which should be in your home directory).
 
-``` bash
-%> /path/to/tricordings/logs/daily_twitter_scrape_log.txt
+```{bash}
+>> /path/to/tricordings/logs/daily_twitter_scrape_log.txt
 ```
 
 ## Collecting Data
